# temp_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Coordinator.hpp  Engine.hpp  Entity.hpp  EntityManager.hpp  Math.hpp  Player.hpp  README  README.md  Scene.hpp  build.sh  main.cpp  sanitizer-thread-suppressions.supp
Components/: Component.hpp  ComponentContainer.hpp  ComponentData.hpp  DataManipulator.hpp  Position2D.hpp  Transform.hpp
glad/include/glad/: gl.h  glx.h  wgl.h
glad/src/: wgl.c
src/Editor/: CMakeLists.txt  EditorLevel.cpp  EditorLevel.hpp  Entry.hpp  main.cpp
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Coordinator.cpp  Coordinator.hpp  Editor.cpp  Editor.hpp  Engine.cpp  Engine.hpp  EngineUtils.cpp  EngineUtils.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Event.hpp  FontLoader.cpp  FontLoader.hpp  ImageLoader.hpp  Input.cpp  Input.hpp  Logger.hpp  Math.cpp  Math.hpp  NSUtils.hpp  Player.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  TextBox.cpp  TextBox.hpp  TextButton.hpp
src/Engine/Assets/LuaScripts/: Test.lua
src/Engine/Assets/Shaders/: Common.glsl  Grid.glsl  Test.glsl  Text.glsl
src/Engine/Components/: Component.hpp  ComponentContainer.cpp  ComponentContainer.hpp  ComponentData.hpp  ComponentType.hpp  Drawable.cpp  Drawable.hpp  Hoverable.hpp  Luable.cpp  Luable.hpp
src/Engine/Entity/: EntityManager.cpp  EntityManager.hpp  Player.hpp  TextBox.cpp  TextBox.hpp  TextButton.hpp
src/Engine/Levels/: Test.level
src/Engine/LuaScripts/: Test.lua
src/Engine/Render/: RenderUtils.hpp  Utils.hpp
src/Engine/Render/OpenGL/: CGRender.hpp  NSRender.hpp  NSRender.mm  OpenGLWrapper.cpp  OpenGLWrapper.hpp  X11Render.cpp  X11Render.hpp  imgui_impl_x11.cpp  imgui_impl_x11.hpp
src/Engine/Render/OpenGL/Shaders/: Common.glsl  Grid.glsl  Text.glsl
src/Engine/Render/glad/: gl.c  gl.h  glx.c  glx.h  wgl.h
src/Engine/Scene/: LevelParser.cpp  LevelParser.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp
src/Engine/UnitTests/: CMakeLists.txt  UT_Common.hpp  UT_Event.hpp  UT_Hoverable.hpp  UT_LevelParser.hpp  UT_Main.cpp  UT_Math.hpp
src/NumberGame/: CMakeLists.txt  Coordinator.cpp  Coordinator.hpp  Entry.hpp  GameLevel.cpp  GameLevel.hpp  Grid.cpp  Grid.hpp  MainMenuLevel.cpp  MainMenuLevel.hpp  Scene.cpp  Scene.hpp  main.cpp
src/NumberGame/Assets/Levels/: MainMenu.level
src/NumberGame/Components/: ComponentContainer.cpp  ComponentContainer.hpp  ComponentType.hpp
src/NumberGame/Levels/: MainMenu.level
src/TestGame/: Entry.hpp  TestLevel.hpp  main.cpp
src/TestGame2/: Entry.hpp  TestLevel.hpp  main.cpp
src/UT_Engine/: CMakeLists.txt  UT_Common.hpp  UT_ComponentContainer.hpp  UT_ComponentData.hpp  UT_Event.hpp  UT_Hoverable.hpp
src/UnitTests/: CMakeLists.txt  UT_Main.cpp
