set ( ENGINE_UT_SOURCE
  UT_Main.cpp
)

add_executable(${TARGET_ENGINE_UNIT_TESTS} ${ENGINE_UT_SOURCE})

add_dependencies(${TARGET_ENGINE_UNIT_TESTS} ${TARGET_ENGINE})
target_include_directories(${TARGET_NUMBER_GAME} PRIVATE ${SRC_DIR})
target_link_libraries(${TARGET_ENGINE_UNIT_TESTS} ${TARGET_ENGINE})

if(APPLE)
  target_compile_definitions(${TARGET_ENGINE_UNIT_TESTS} PUBLIC GL_SILENCE_DEPRECATION)
endif()

set_target_properties(${TARGET_ENGINE_UNIT_TESTS} PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${TARGET_ENGINE_UNIT_TESTS}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${TARGET_ENGINE_UNIT_TESTS}"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${TARGET_ENGINE_UNIT_TESTS}"
)

target_compile_options(${TARGET_ENGINE_UNIT_TESTS} PRIVATE
  $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Werror>
)
